# Simple-Raylib-Template

./: CMakeLists.txt  README.md
src/: main.c
